Fixed – Search results wrapping issue in header bar

--- a/styles/_search-bar-controls.sass
+++ b/styles/_search-bar-controls.sass
@@ -48,6 +48,8 @@ header
                 width: 64px
             .search-buttons
                 width: 129px
+    .region-list
+        clear: both
 
 .search-bar-form
     display: block
